changes to work on cloud

--- a/.env
+++ b/.env
@@ -3,12 +3,12 @@
 DB_USERNAME=ytdiff
 DB_NAME=vidlist
 DB_HOST=yt-db
-DB_LOCATION=/home/sagnik/Documents/yt-data
-DB_DUMP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db
+DB_LOCATION=/mnt/disks/ext/Documents/yt-data
+DB_DUMP_LOCATION=/mnt/disks/ext/MEGAsync/Databases/yt-db
 
 # YT-DIFF options
 PROTOCOL=https
-HOSTNAME=ideapad.tail9ece4.ts.net
+HOSTNAME=ytdiff.cloud
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
@@ -16,9 +16,11 @@ NATIVE_HTTPS_SUPPORT=false
 
 # Using a relative path is okey, but a absolute path works best
 SAVE_PATH=/home/sagnik/Videos/yt-dlp/
-HOST_SAVE_PATH=/home/sagnik/Videos/yt-dlp/
-SLEEP=3 # 0 works but don't use it, please
-CHUNK_SIZE=10 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
+HOST_SAVE_PATH=/mnt/disks/ext/Videos/yt-dlp/
+# 0 works but don't use it, please
+SLEEP=3
+# https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
+CHUNK_SIZE=10 
 SAVE_SUBSTITLES=true
 SAVE_DESCRIPTION=true
 SAVE_COMMENTS=true
