made the env variables naming consistent

--- a/.env
+++ b/.env
@@ -12,14 +12,14 @@ HOSTNAME=ideapad.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
-NATIVE_HTTPS_SUPPORT=false
+USE_NATIVE_HTTPS=false
 
 # Using a relative path is okey, but a absolute path works best
 SAVE_PATH=/home/sagnik/Videos/yt-dlp/
 HOST_SAVE_PATH=/home/sagnik/Videos/yt-dlp/
 SLEEP=3 # 0 works but don't use it, please
-CHUNK_SIZE=10 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
-SAVE_SUBSTITLES=true
+CHUNK_SIZE_DEFAULT=10 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
+SAVE_SUBTITLES=true
 SAVE_DESCRIPTION=true
 SAVE_COMMENTS=true
 SAVE_THUMBNAIL=true
