--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -109,12 +109,12 @@ services:
       - "traefik.http.routers.ytdiff.tls=true"
       - "traefik.http.routers.ytdiff.tls.certresolver=tailsolver"
       - "traefik.http.routers.ytdiff.tls.domains[0].main=${HOSTNAME}"
-    healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8888/ytdiff"]
-      interval: 5m
-      timeout: 5s
-      start_period: 30s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD", "wget", "-q", "--spider", "http://localhost:8888/ytdiff"]
+    #   interval: 5m
+    #   timeout: 5s
+    #   start_period: 30s
+    #   retries: 3
 
   adminer:
     image: adminer:4.8.1-standalone
