--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cli-color": "^2.0.3",
     "cron": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cache": "^5.1.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.31.1",
