changed save path in cloud

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ HIDE_PORTS=true
 NATIVE_HTTPS_SUPPORT=false
 
 # Using a relative path is okey, but a absolute path works best
-SAVE_PATH=/home/sagnik/Videos/yt-dlp/
+SAVE_PATH=/yt-dlp/
 HOST_SAVE_PATH=/mnt/disks/ext/Videos/yt-dlp/
 # 0 works but don't use it, please
 SLEEP=3
