tags were mismatched and tailslover needed to be added back

--- a/.env
+++ b/.env
@@ -12,15 +12,15 @@ HOSTNAME=ytdiff.cloud
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
-USE_NATIVE_HTTPS=false
+NATIVE_HTTPS_SUPPORT=false
 
 # Using a relative path is okey, but a absolute path works best
-SAVE_PATH=/home/sagnik/Videos/yt-dlp/
-HOST_SAVE_PATH=/home/sagnik/Videos/yt-dlp/
+SAVE_PATH=/yt-dlp/
+HOST_SAVE_PATH=/mnt/disks/ext/Videos/yt-dlp/
 # 0 works but don't use it, please
 SLEEP=3
 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
-CHUNK_SIZE=10 
+CHUNK_SIZE_DEFAULT=10
 SAVE_SUBTITLES=true
 SAVE_DESCRIPTION=true
 SAVE_COMMENTS=true
