--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,12 +56,12 @@ services:
       - revProxy-net
 
   yt-diff:
-    image: purevert/yt-diff:aarch64
+    image: purevert/yt-diff:amd64
     container_name: yt-diff
     restart: always
     build:
       context: .
-      dockerfile: Dockerfile.aarch64
+      dockerfile: Dockerfile
       args:
         - base_url=${BASE_URL}
       # Use this to modify the files during building
