--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,36 +20,36 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
-      - name: Get Composer Cache Directory
-        id: composer-cache
-        run: |
-          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_ENV
+      # - name: Get Composer Cache Directory
+      #   id: composer-cache
+      #   run: |
+      #     echo "dir=$(composer config cache-files-dir)" >> $GITHUB_ENV
 
-      - name: Cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: |
-            /tmp/.buildx-cache
-            ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+      # - name: Cache Docker layers
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: |
+      #       /tmp/.buildx-cache
+      #       ${{ steps.composer-cache.outputs.dir }}
+      #     key: ${{ runner.os }}-buildx-${{ github.sha }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-buildx-
 
       - name: Extract metadata
         id: meta
@@ -68,16 +68,16 @@ jobs:
             type=sha
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
           file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64
-          cache-from: |
-            type=local,src=/tmp/.buildx-cache
-            type=local,src=${{ steps.composer-cache.outputs.dir }}
-          cache-to: |
-            type=local,dest=/tmp/.buildx-cache
-            type=local,dest=${{ steps.composer-cache.outputs.dir }}
+          # cache-from: |
+          #   type=local,src=/tmp/.buildx-cache
+          #   type=local,src=${{ steps.composer-cache.outputs.dir }}
+          # cache-to: |
+          #   type=local,dest=/tmp/.buildx-cache
+          #   type=local,dest=${{ steps.composer-cache.outputs.dir }}
