--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,8 +68,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
+        # This is used to build the frontend in the docker image
         - VITE_BASE_PATH=${BASE_URL}
-      # Use this to modify the files during building
     volumes:
       - ${HOST_SAVE_PATH}:/${SAVE_PATH}
     depends_on:
