--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,20 +36,20 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # - name: Get Composer Cache Directory
-      #   id: composer-cache
-      #   run: |
-      #     echo "dir=$(composer config cache-files-dir)" >> $GITHUB_ENV
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: |
+          echo "dir=$(composer config cache-files-dir)" >> $GITHUB_ENV
 
-      # - name: Cache Docker layers
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: |
-      #       /tmp/.buildx-cache
-      #       ${{ steps.composer-cache.outputs.dir }}
-      #     key: ${{ runner.os }}-buildx-${{ github.sha }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-buildx-
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: |
+            /tmp/.buildx-cache
+            ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Extract metadata
         id: meta
@@ -75,13 +75,12 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64
-          # cache-from: |
-          #   type=local,src=/tmp/.buildx-cache
-          #   type=local,src=${{ steps.composer-cache.outputs.dir }}
-          # cache-to: |
-          #   type=local,dest=/tmp/.buildx-cache
-          #   type=local,dest=${{ steps.composer-cache.outputs.dir }}
-          # Todo: Find if it's possible to build vite woithout this
+          cache-from: |
+            type=local,src=/tmp/.buildx-cache
+            type=local,src=${{ steps.composer-cache.outputs.dir }}
+          cache-to: |
+            type=local,dest=/tmp/.buildx-cache
+            type=local,dest=${{ steps.composer-cache.outputs.dir }}
           build-args: |
             VITE_BASE_PATH=/ytdiff
 
