--- a/.github/workflows/prune-registry.yml
+++ b/.github/workflows/prune-registry.yml
@@ -1,12 +1,13 @@
 name: Prune Registry
 
-# on:
-#   workflow_dispatch:
-#   schedule:
-#     - cron: 0 2 * * *
-
 on:
+  workflow_dispatch:
+  schedule:
+    - cron: 0 2 * * *
   pull_request:
+    branches:
+      - master
+  push:
     branches:
       - master
 
