replaced  vars with lets as it's safer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,9 @@
         "pornhub",
         "pornstar",
         "privkey",
+        "purevert",
         "reinit",
+        "sagnikdas",
         "spankbang",
         "sublist",
         "uuidv",
