--- a/.env
+++ b/.env
@@ -4,7 +4,9 @@ DB_USERNAME=ytdiff
 DB_NAME=vidlist
 DB_HOST=yt-db
 DB_LOCATION=/mnt/disks/ext/Documents/yt-data
-DB_DUMP_LOCATION=/mnt/disks/ext/MEGAsync/Databases/yt-db
+DB_DUMP_LOCATION=/mnt/disks/ext/Documents/Databases/yt-db
+UID=1000
+GID=1000
 
 # YT-DIFF options
 PROTOCOL=https
