added failsafe in listing

--- a/.env
+++ b/.env
@@ -3,22 +3,22 @@
 DB_USERNAME=ytdiff
 DB_NAME=vidlist
 DB_HOST=yt-db
-DB_LOCATION=/mnt/disks/ext/Documents/yt-data
-DB_DUMP_LOCATION=/mnt/disks/ext/Documents/Databases/yt-db
+DB_LOCATION=/home/sagnik/Documents/yt-data
+DB_DUMP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db
 UID=1000
 GID=1000
 
 # YT-DIFF options
 PROTOCOL=https
-HOSTNAME=ytdiff.cloud
+HOSTNAME=ideapad.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
 NATIVE_HTTPS_SUPPORT=false
 
 # Using a relative path is okey, but a absolute path works best
-SAVE_PATH=/yt-dlp/
-HOST_SAVE_PATH=/mnt/disks/ext/Videos/yt-dlp/
+SAVE_PATH=/home/sagnik/Videos/yt-dlp/
+HOST_SAVE_PATH=/home/sagnik/Videos/yt-dlp/
 # 0 works but don't use it, please
 SLEEP=3
 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
