I don't care anymore TBH

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ secrets:
 services:
   yt-db:
     image: postgres:16.2-alpine3.19
+    # postgres:14.10-alpine3.18
     container_name: yt-db
     ports:
       - 5432:5432
