Remove adminer and added pgadmin

--- a/.env
+++ b/.env
@@ -3,14 +3,18 @@
 DB_USERNAME=ytdiff
 DB_NAME=vidlist
 DB_HOST=yt-db
-DB_LOCATION=/home/sagnik/Documents/yt-data
-DB_DUMP_LOCATION=/home/sagnik/MEGAsync/Databases/yt-db
+DB_LOCATION=/home/admin/Documents/yt-data
+DB_DUMP_LOCATION=/home/admin/Documents/yt-db
 UID=1000
 GID=1000
 
+# PGADMIN options
+PG_ADMIN_EMAIL=ramdon.email@example.com
+PG_ADMIN_PASSWORD=2OPmJgXSdXjO2y7vn91yow7Z
+
 # YT-DIFF options
 PROTOCOL=https
-HOSTNAME=ideapad.tail9ece4.ts.net
+HOSTNAME=pi.tail9ece4.ts.net
 PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
@@ -18,7 +22,7 @@ NATIVE_HTTPS_SUPPORT=false
 
 # Using a relative path is okey, but a absolute path works best
 SAVE_PATH=/home/sagnik/Videos/yt-dlp/
-HOST_SAVE_PATH=/home/sagnik/Videos/yt-dlp/
+HOST_SAVE_PATH=/home/admin/Videos/yt-dlp
 # 0 works but don't use it, please
 SLEEP=3
 # https://github.com/TeamNewPipe/NewPipe/issues/875#issuecomment-347592489
