--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.2.3",
     "cli-color": "^2.0.3",
     "cron": "^2.3.0",
+    "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
     "pg": "^8.10.0",
