--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cron": "^2.3.0",
     "generate-password": "^1.7.1",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.0.2",
     "node-cache": "^5.1.2",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
