--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ networks:
 secrets:
   db_password:
     file: db_password.txt
+  secret_key:
+    file: secret_key.txt
 
 volumes:
   pgadmin-data:
@@ -103,6 +105,7 @@ services:
     #   - ${PORT}:${PORT}
     secrets:
       - db_password
+      - secret_key
     environment:
       - PROTOCOL=${PROTOCOL}
       - HOSTNAME=${HOSTNAME}
@@ -114,6 +117,7 @@ services:
       - DB_HOST=${DB_HOST}
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD_FILE=/run/secrets/db_password
+      - SECRET_KEY_FILE=/run/secrets/secret_key
       # Download configuration
       - SAVE_PATH=${SAVE_PATH}
       - SLEEP=${SLEEP}
