Add LOG_LEVELS environment variable to .env and docker-compose.yml

--- a/.env
+++ b/.env
@@ -19,6 +19,7 @@ PORT=8888
 BASE_URL=/ytdiff
 HIDE_PORTS=true
 NATIVE_HTTPS_SUPPORT=false
+LOG_LEVELS=debug
 
 # Using a relative path is okey, but a absolute path works best
 SAVE_PATH=/home/sagnik/Videos/yt-dlp/
