--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "downloads videos and watches for changes using yt-dlp and maintains a database",
   "main": "index.js",
   "scripts": {
-    "dev": "SECRET_KEY=ytd1ff node --watch index.js",
-    "run": "SECRET_KEY=ytd1ff node index.js"
+    "dev": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff node --watch index.js",
+    "devnew": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff node --watch index-rewrite.js",
+    "run": "SECRET_KEY=ytd1ff DB_PASSWORD=ytd1ff node index.js"
   },
   "repository": {
     "type": "git",
