Update Dockerfile to use specific Ubuntu image; add @types/cron to devDependencies in package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/cron": "^2.0.1",
     "csv-parser": "^3.0.0",
     "newman": "^6.2.1"
   }
